--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
-    "react-icons": "^4.6.0"
+    "react-icons": "^4.6.0",
+    "spinners-react": "^1.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
