--- a/frontend/.env
+++ b/frontend/.env
@@ -5,3 +5,5 @@ NEXT_PUBLIC_STORAGE_BUCKET = creative-thoughts-8f6d1.appspot.com
 NEXT_PUBLIC_MESSAGING_SENDER_ID = 372640278974
 NEXT_PUBLIC_APP_ID = 1:372640278974:web:450ac6722fdb940d5e71ef
 NEXT_PUBLIC_MEASUREMENT_ID = G-NV9TQ0MXH4
+PORT = http://localhost:5000
+MODE = development
